--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Pivotal Tracker Story Board",
-  "version": "1.0.4",
+  "version": "2.0",
 
   "description": "Keep an eye on the current iteration!",
   "icons":
@@ -12,22 +12,14 @@
 
   "background_page": "background.html",
 
-  "page_action":
+  "browser_action":
   {
     "default_icon": "images/board32.png",
-    "default_title": "Story Board"
+    "default_title": "Pivotal Tracker Story Board",
+    "popup": "selectProject.html"
   },
 
   "options_page": "options.html",
-
-  "content_scripts":
-  [
-      {
-         "matches": ["http://www.pivotaltracker.com/projects/*", "https://www.pivotaltracker.com/projects/*"],
-         "js": ["scripts/content.js"],
-         "run_at": "document_start"
-      }
-  ],
 
   "permissions":
   [
